--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
                     <skipSortingImports>false</skipSortingImports>
                     <style>google</style>
                 </configuration>
-                <executions>
+                <!--<executions>
                     <execution>
                         <id>google-formatter-validation</id>
                         <phase>validate</phase>
@@ -53,7 +53,7 @@
                             <goal>check</goal>
                         </goals>
                     </execution>
-                </executions>
+                </executions>-->
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
